--- a/style.css
+++ b/style.css
@@ -9,7 +9,16 @@ main{
 }
 
 .menu{
+    width: 100%;
+    height: 40px;
     position: fixed;
     z-index: 9999;
+    display: flex;
+    justify-content: space-around;
+
 }
 
+.menu li{
+    margin-top: 20px;
+
+}
