--- a/style.css
+++ b/style.css
@@ -22,3 +22,15 @@ main{
     margin-top: 20px;
 
 }
+
+.container{
+    margin: 0 auto;
+    padding: 0 60px;
+    position: relative;
+}
+
+
+#syokugurume{
+    position: absolute;
+    margin-top: 300px;
+}
