--- a/style.css
+++ b/style.css
@@ -1,28 +1,53 @@
 main{
-    width: 120%;
+    width: 100%;
     margin: auto;
+    position: relative;
 }
 .slider-1 img{
     width: 100%;
     height: 600px;
     
+    
 }
 
 .menu{
     width: 100%;
-    height: 40px;
+    height: 200px;
     position: fixed;
     z-index: 9999;
+    color: #fff;
+    font-size: 20px;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+.main-menu{
     display: flex;
-    justify-content: space-around;
-
+    justify-content: center;
+}
+.menu-light{
+    margin-top: 60px;
+    margin-left: -100px;
+}
+.fa-light{
+    
 }
 
-.menu li{
+.main-menu li{
     margin-top: 20px;
+    margin-left: 60px;
 
 }
 
+.logo{
+    position: absolute;
+    z-index: 9999;
+    margin-top: -250px;
+    margin-left: 150px;
+    width: 212px;
+    height: auto;
+
+}
+/* ここからあやちゃん */
 .container img{
     margin-top: 200px;
     width: 1500px;
